--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ian Candy",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
